--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "prebuild": "npm run clean && mkdirp build/public/{css,js,images}",
     "build": "npm-run-all -p build:*",
     "prebuild:css": "echo '=> Linting CSS' && stylelint lib/css/**/*.css --config scripts/stylelint.config.js || true",
-    "build:css": "postcss -c scripts/postcss.config.js lib/css/main.css -o build/public/css/main.min.css",
+    "build:css": "postcss -c scripts/postcss.config.js lib/css/main.css -o build/public/css/main.css",
     "build:html": "node permalinks.js",
+    "postbuild:html": "node paths.js",
     "build:img": "imagemin lib/images/* build/public/images",
     "prebuild:js": "echo '=> Linting JS' && eslint lib/js/**.js",
-    "build:js": "uglifyjs lib/js/*.js -o build/public/js/main.min.js",
+    "build:js": "uglifyjs lib/js/*.js -o build/public/js/main.js",
     "watch:css": "onchange 'lib/css/**.*' -- npm run build:css",
     "watch:js": "onchange 'lib/js/**.*' -- npm run build:js",
     "watch:html": "onchange '**/*.html' -e 'build/**/*.html' -- npm run build:html",
@@ -47,6 +48,7 @@
     "postcss-cli": "^2.5.1",
     "postcss-import": "^8.0.2",
     "precss": "^1.4.0",
+    "replace": "^0.3.0",
     "rimraf": "^2.5.2",
     "rucksack-css": "^0.8.5",
     "stylelint": "^4.5.0",
