--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf build/*",
     "prebuild": "npm run clean && mkdirp build/public/{css,js,images}",
     "build": "npm-run-all -p build:*",
-    "prebuild:css": "echo '=> Linting CSS' && stylelint lib/css/**/*.css --config scripts/stylelint.config.js || true",
+    "prebuild:css": "stylelint lib/css/**/*.css --config scripts/stylelint.config.js || true",
     "build:css": "postcss -c scripts/postcss.config.js lib/css/main.css -o build/public/css/main.css",
     "build:html": "node permalinks.js",
     "postbuild:html": "node paths.js",
