--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "onchange": "^2.1.2",
     "path": "^0.12.7",
     "postcss": "^5.0.19",
+    "postcss-animation": "0.0.6",
     "postcss-cli": "^2.5.1",
-    "postcss-easings": "^0.3.0",
     "postcss-import": "^8.0.2",
+    "postcss-size": "^1.0.0",
     "precss": "^1.4.0",
     "replace": "^0.3.0",
     "rimraf": "^2.5.2",
