Finish Macy's case.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf build/*",
     "prebuild": "npm run clean && mkdirp build/public/{css,js,images}",
     "build": "npm-run-all -p build:*",
-    "prebuild:css": "stylelint lib/css/**/*.css --config scripts/stylelint.config.js || true",
+    "lint:css": "stylelint lib/css/**/*.css --config scripts/stylelint.config.js || true",
     "build:css": "postcss -c scripts/postcss.config.js lib/css/main.css -o build/public/css/main.css",
     "build:html": "node permalinks.js",
     "postbuild:html": "node paths.js",
@@ -44,11 +44,13 @@
     "npm-run-all": "^1.5.2",
     "onchange": "^2.1.2",
     "path": "^0.12.7",
+    "permalinks": "^0.3.1",
     "postcss": "^5.0.19",
     "postcss-animation": "0.0.6",
     "postcss-cli": "^2.5.1",
     "postcss-import": "^8.0.2",
     "postcss-size": "^1.0.0",
+    "postcss-vertical-rhythm": "^1.1.5",
     "precss": "^1.4.0",
     "replace": "^0.3.0",
     "rimraf": "^2.5.2",
