Add includes to PostHTML

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm-run-all -p build:*",
     "lint:css": "stylelint lib/css/**/*.css --config scripts/stylelint.config.js || true",
     "build:css": "postcss -c scripts/postcss.config.js lib/css/main.css -o build/public/css/main.css",
-    "build:html": "node permalinks.js",
+    "build:html": "node scripts/html.js",
     "postbuild:html": "node paths.js",
     "build:img": "imagemin lib/images/* build/public/images",
     "prebuild:js": "echo '=> Linting JS' && eslint lib/js/**.js",
@@ -52,7 +52,7 @@
     "postcss-size": "^1.0.0",
     "postcss-vertical-rhythm": "^1.1.5",
     "posthtml": "^0.8.5",
-    "posthtml-exp": "^0.8.1",
+    "posthtml-include": "^1.0.2",
     "precss": "^1.4.0",
     "replace": "^0.3.0",
     "rimraf": "^2.5.2",
