Rework image structure & build. Fix a permalink issue.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "npm-run-all -p build:*",
     "lint:css": "stylelint lib/css/**/*.css --config scripts/stylelint.config.js || true",
     "build:css": "postcss -c scripts/postcss.config.js lib/css/main.css -o build/public/css/main.css",
-    "build:html": "node scripts/html.js",
-    "build:img": "imagemin lib/images/* build/public/images",
+    "build:html": "node scripts/build.html.js",
+    "build:img": "node scripts/build.img.js",
     "prebuild:js": "echo '=> Linting JS' && eslint lib/js/**.js",
     "build:js": "uglifyjs lib/js/*.js -o build/public/js/main.js",
     "watch:css": "onchange 'lib/css/**.*' -- npm run build:css",
@@ -40,6 +40,7 @@
     "http-server": "^0.9.0",
     "lost": "^6.7.2",
     "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0",
     "npm-run-all": "^1.5.2",
     "onchange": "^2.1.2",
     "path": "^0.12.7",
