--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "prebuild": "npm run clean && mkdirp build/public/{css,js,images}",
     "build": "npm-run-all -p build:*",
     "lint:css": "stylelint lib/css/**/*.css --config scripts/stylelint.config.js || true",
-    "build:css": "postcss -c scripts/postcss.config.js lib/css/main.css -o build/public/css/main.css",
+    "lint:js": "echo '=> Linting JS' && eslint lib/js/**.js",
+    "build:css": "postcss -c scripts/build.css.js",
     "build:html": "node scripts/build.html.js",
     "build:img": "node scripts/build.img.js",
-    "prebuild:js": "echo '=> Linting JS' && eslint lib/js/**.js",
     "build:js": "uglifyjs lib/js/*.js -o build/public/js/main.js",
     "watch:css": "onchange 'lib/css/**.*' -- npm run build:css",
     "watch:js": "onchange 'lib/js/**.*' -- npm run build:js",
@@ -30,7 +30,6 @@
   },
   "homepage": "https://github.com/Vpr99/Portfolio-Static#readme",
   "devDependencies": {
-    "autoprefixer": "^6.3.3",
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "cssnano": "^3.5.2",
@@ -46,7 +45,6 @@
     "path": "^0.12.7",
     "permalinks": "^0.3.1",
     "postcss": "^5.0.19",
-    "postcss-animation": "0.0.6",
     "postcss-cli": "^2.5.1",
     "postcss-import": "^8.0.2",
     "postcss-size": "^1.0.0",
